--- a/app/assembled.html
+++ b/app/assembled.html
@@ -125,7 +125,7 @@ body * {
 	<div class="random-image"></div>
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 
 <script>
 	// https://unsplash.com/collections/3178572/winter
@@ -140,7 +140,7 @@ body * {
 
 		let imgHldr = $(".random-image");
 
-		let theAni = plugColl => {
+		let theAni = async function(plugColl) {
 			// Adding a random number to the URL ensures that
 			// a new, random image is pulled. Otherwise it just
 			// pulls the same image every time
@@ -158,7 +158,7 @@ body * {
 			// 
 			// Execute looping by recurssively calling theAni()
 			//
-			var imgFetch = $("<img />")
+			var imgFetch = await $("<img />")
 				.attr(
 					"src",
 					"https://source.unsplash.com/collection/" +
