added collections + styled nav
added collections pulling from @nypl + styled nav to account for
additional content

--- a/app/assembled.html
+++ b/app/assembled.html
@@ -43,16 +43,23 @@ body * {
 
 .ranWrapper nav ul {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-column-gap: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0;
+  padding: 0 30px;
   list-style-type: none;
 }
 
 .ranWrapper nav li {
+  padding: 0 40px;
   font-size: 60px;
   color: deepskyblue;
   text-align: center;
@@ -118,7 +125,8 @@ body * {
 		<ul>
 			<li class="cpunc">cpunc</li>
 			<li class="infra">infra</li>
-			<li class="milkn">milkn</li>
+			<li class="oldNY">old new york</li>
+			<li class="bott">bottanicals</li>
 		</ul>
 	</nav>
 
@@ -225,16 +233,27 @@ body * {
 		//
 		imgHldr.stop().clearQueue();
 
+		// ————— ACCOUNTS —————
+		// https://unsplash.com/@nypl
+		//
+		//
+		// ————— COLLECTIONS —————
 		// https://unsplash.com/collections/3178572/winter
 		// https://unsplash.com/collections/219941/architecture%2C-buildings%2C-spaces
 		// https://unsplash.com/collections/3694365/gradient-nation
+		//
+		//
+		// ————— MINE —————
+		// https://unsplash.com/collections/2598205/cpunc
+		// https://unsplash.com/collections/9736875/bott
+		// https://unsplash.com/collections/9736914/old-new-york
 
 		let swpColl = $(this).attr("class");
 		switch (swpColl) {
 			case "cpunc":
 				console.log("swpColl: " + swpColl);
 
-				swapper("3178572");
+				swapper("2598205");
 				break;
 
 			case "infra":
@@ -243,8 +262,12 @@ body * {
 				swapper("219941");
 				break;
 
-			case "milkin":
-				swapper("3694365");
+			case "oldNY":
+				swapper("9736914");
+				break;
+
+			case "bott":
+				swapper("9736875");
 				break;
 
 			default:
@@ -255,7 +278,7 @@ body * {
 	// Init ... fire the fucker up
 	//
 	(function() {
-		unsp("3178572");
+		unsp("9736875");
 	})();
 </script>
 
