--- a/app/assembled.html
+++ b/app/assembled.html
@@ -127,6 +127,7 @@ body * {
 			<li class="infra">infra</li>
 			<li class="old-new-york">old new york</li>
 			<li class="bott">bottanicals</li>
+			<li class="shapes%2C-patterns-%26-textures">patterns 01</li>
 		</ul>
 	</nav>
 
@@ -241,6 +242,7 @@ body * {
 		// https://unsplash.com/collections/3178572/winter
 		// https://unsplash.com/collections/219941/architecture%2C-buildings%2C-spaces
 		// https://unsplash.com/collections/3694365/gradient-nation
+		// https://unsplash.com/collections/227/shapes%2C-patterns-%26-textures
 		//
 		//
 		// ————— RWW —————
@@ -248,8 +250,8 @@ body * {
 		// https://unsplash.com/collections/9710463/infra
 		// https://unsplash.com/collections/9736914/old-new-york
 		// https://unsplash.com/collections/9736875/bott
-		// 
-		// 
+		//
+		//
 		let swpColl = $(this).attr("class");
 		switch (swpColl) {
 			case "cpunc":
@@ -268,6 +270,10 @@ body * {
 
 			case "bott":
 				swapper("9736875");
+				break;
+
+			case "shapes%2C-patterns-%26-textures":
+				swapper("227");
 				break;
 
 			default:
